# sysbox

./: .dockerignore  .env.example  .gitignore  CHANGELOG.v1.0.md  Dockerfile  Dockerfile.cli  Dockerfile.metadata  Makefile  README.md  docker-compose.firecracker.yml  docker-compose.libvirt.yml  docker-compose.netns.yml  docker-compose.yml  go.mod  go.sum  pyproject.toml
.forgejo/workflows/: acceptance.yml  ci.yml  release.yml
.github/workflows/: ci.yml  release.yml
cmd/sysbox/: main.go
cmd/sysbox-init/: main.go  network.go  sensor.go  server.go
cmd/sysbox-sshd-hook/: main.go
deploy/docker/: compose.agent.yml  compose.firecracker.yml  compose.full.yml  compose.netns.yml  compose.vm.yml  compose.web.yml  compose.yml  sysbox.yaml
docs/: README.md  api.md  architecture-review-multi-substrate.md  architecture.md  deployment.md  design-principles.zh-CN.md  firecracker-artifacts.md  firecracker-vmbox.md  gap-analysis-2026-05-08.md  index.md  k8s-agent-sandbox.md  label-overview.md  overview.md  quickstart.md  refactor-plan-multi-substrate.md  releasing.md  roadmap-feature-matrix.md  roadmap.md
docs/architecture/: backend-safety.md  handler-driver-contracts.md  resource-addresses.md  secrets.md  stored-plan-contract.md  typed-state.md
docs/development/: contributing.md  development.md  (+2 more)
runner/: __init__.py  agent.py  episode.py  resolver.py
scripts/: microvm-verify.sh  mixed-verify.sh  prepare-fc-rootfs.sh  prepare-libvirt-cloud-image.sh
tests/: scenario.sh
web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+519 files in other folders)
