[project]
name = "sysbox-runner"
version = "0.1.0"
description = "Python runner for sysbox automated attack episodes"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.79",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
